# Boltzmann

./: AUTHORS  COPYING  ChangeLog  ECL-2.0_LICENSE_TERMS.TXT  LICENSE  Makefile  Makefile.am  Makefile.body  Makefile.head  Makefile.in  Makefile.mmap  Makefile.no_mmap  Makefile.timing  NEWS  README  README.md  Yarrowia_pgt_concs.in  algorithm_parameters.html  alloc0.c  alloc0.h  alloc0_a.c  alloc0_a.h  alloc2.c  alloc2.h  alloc2_a.c  alloc2_a.h  alloc3.c  alloc3.h  alloc4.c  alloc4.h  alloc5.c  alloc5.h  alloc6.c  alloc6.h  alloc7.c  alloc8.c  alloc8.h  alloc9.c  alloc9.h  approximate_delta_concs.c  (+633 more)
autom4te.cache/: traces.0  traces.0.cilog.r1419  traces.1
data/: kegg_2_json.srt  modelseed_2_json.srt  modelseed_compounds_db.txt  modelseed_ids_with_spaces.txt  modelseed_multiple_kegg_id.txt  pseudoisomer_dg0f.txt  unique_modelseed_ids_sorted_by_kegg.txt  unsorted_ids.txt  unsorted_modelseed_ids.txt  unsorted_modelseed_ids_with_spaces.txt
doc/: INSTALL.txt  additional_ode_derivative_params.html  approximate_delta_concs.txt  boltzmann.html  epsilon.doc  generic_ode.html  global_sort.doc  interface.doc  inventory.doc  output_files.html  physical_constants.html
src/: #Makefile#  ECL-2.0_LICENSE_TERMS.TXT  Makefile  Makefile.am  Makefile.body  Makefile.head  Makefile.in  alloc0.c  alloc0_a.c  alloc1.h  alloc2.c  alloc3.c  alloc3.h  alloc4.c  alloc4.h  alloc5.h  alloc6.c  alloc6.h  alloc7.c  alloc7.h  alloc8.c  alloc8.h  alloc9.c  alloc9.h  approximate_fluxes.h  approximate_jacobian.c  approximate_jacobian.h  approximate_ys0.c  approximate_ys0.h  autogen.sh  blank_to_dash.h  (+497 more)
(+250 files in other folders)
